// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse config ensure parsing integrity overwrite:false 1`] = `
Object {
  "overwrite": false,
  "targetDir": "../../tempForTests",
  "templateDir": "../cgp-template-default",
  "templateName": "default",
}
`;

exports[`parse config ensure parsing integrity overwrite:true 1`] = `
Object {
  "overwrite": true,
  "targetDir": "../../tempForTests",
  "templateDir": "../cgp-template-default",
  "templateName": "default",
}
`;

exports[`parse config ensure parsing integrity template:react 1`] = `
Object {
  "overwrite": false,
  "targetDir": "../../tempForTests",
  "templateDir": "../cgp-template-react",
  "templateName": "react",
}
`;

exports[`parse config ensure parsing integrity template:react/overwrite:false 1`] = `
Object {
  "overwrite": false,
  "targetDir": "../../tempForTests",
  "templateDir": "../cgp-template-react",
  "templateName": "react",
}
`;

exports[`parse config ensure parsing integrity template:react/overwrite:true 1`] = `
Object {
  "overwrite": true,
  "targetDir": "../../tempForTests",
  "templateDir": "../cgp-template-react",
  "templateName": "react",
}
`;

exports[`parse config ensure parsing integrity template:react-ts 1`] = `
Object {
  "overwrite": false,
  "targetDir": "../../tempForTests",
  "templateDir": "../cgp-template-react-ts",
  "templateName": "react-ts",
}
`;

exports[`parse config ensure parsing integrity template:react-ts/overwrite:false 1`] = `
Object {
  "overwrite": false,
  "targetDir": "../../tempForTests",
  "templateDir": "../cgp-template-react-ts",
  "templateName": "react-ts",
}
`;

exports[`parse config ensure parsing integrity template:react-ts/overwrite:true 1`] = `
Object {
  "overwrite": true,
  "targetDir": "../../tempForTests",
  "templateDir": "../cgp-template-react-ts",
  "templateName": "react-ts",
}
`;

exports[`parse config ensure parsing integrity template:typescript 1`] = `
Object {
  "overwrite": false,
  "targetDir": "../../tempForTests",
  "templateDir": "../cgp-template-typescript",
  "templateName": "typescript",
}
`;

exports[`parse config ensure parsing integrity template:typescript/overwrite:false 1`] = `
Object {
  "overwrite": false,
  "targetDir": "../../tempForTests",
  "templateDir": "../cgp-template-typescript",
  "templateName": "typescript",
}
`;

exports[`parse config ensure parsing integrity template:typescript/overwrite:true 1`] = `
Object {
  "overwrite": true,
  "targetDir": "../../tempForTests",
  "templateDir": "../cgp-template-typescript",
  "templateName": "typescript",
}
`;

exports[`parse config ensure parsing integrity vanilla 1`] = `
Object {
  "overwrite": false,
  "targetDir": "../../tempForTests",
  "templateDir": "../cgp-template-default",
  "templateName": "default",
}
`;
